# learn-cmake

./: README.md
01-basic/A-hello-cmake/: CMakeLists.txt  main.cpp
01-basic/B-hello-headers/: CMakeLists.txt
01-basic/B-hello-headers/src/: hello.cpp  main.cpp
01-basic/C-static-library/: CMakeLists.txt
01-basic/C-static-library/src/: hello.cpp  main.cpp
01-basic/D-shared-library/: CMakeLists.txt
01-basic/D-shared-library/src/: hello.cpp  main.cpp
01-basic/F-build-type/: CMakeLists.txt  main.cpp
01-basic/G-compile-flags/: CMakeLists.txt  main.cpp
01-basic/H-third-party-library/: CMakeLists.txt
01-basic/I-compiling-with-clang/: CMakeLists.txt  main.cpp
01-basic/J-building-with-ninja/: CMakeLists.txt  main.cpp
01-basic/K-imported-targets/: CMakeLists.txt  main.cpp
02-sub-projects/A-basic/: CMakeLists.txt
02-sub-projects/A-basic/subbinary/: CMakeLists.txt  main.cpp
02-sub-projects/A-basic/sublibrary1/: CMakeLists.txt
02-sub-projects/A-basic/sublibrary1/include/sublib1/: sublib1.h
02-sub-projects/A-basic/sublibrary1/src/: sublib1.cpp
02-sub-projects/A-basic/sublibrary2/: CMakeLists.txt
02-sub-projects/A-basic/sublibrary2/include/sublib2/: sublib2.h
02-sub-projects/A-basic/sublibrary2/src/: sublib2.cpp
